deploy Blucolar test to github

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link rel="apple-touch-icon" href="assets/images/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
   <title>Blucolar Test For Tobey</title>
   <meta content="" name="description">
@@ -19,8 +22,7 @@
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/css/style.css" rel="stylesheet">
-  <link rel="apple-touch-icon" href="assets/images/logo192.png" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  
 </head>
 
 <body class="has-animations">
